--- a/style.css
+++ b/style.css
@@ -59,6 +59,9 @@ body {
   padding: 2rem;
   max-width: 700px;
   box-shadow: 0 0 35px rgba(0, 0, 0, 0.35);
+
+  /* texto justificado */
+  text-align: justify;
 }
 
 /* Textos dentro da caixa */
